--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,46 @@
 # Dependencies
 node_modules/
-pnpm-lock.yaml
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.production
 
-# Build output
+# Build outputs
 dist/
 build/
 
 # Logs
-logs/
 *.log
-npm-debug.log*
-pnpm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Test coverage
-coverage/
+logs/
+combined.log
+error.log
 
 # Temporary files
 *.tmp
 *.temp
-.cache/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Test files
+test-*.ts
+test-*.js
+check-*.ts
+advanced-*.ts
+bot.log
