--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.12.2",
     "argon2": "^0.43.0",
@@ -36,9 +37,10 @@
     "dotenv": "^17.2.1",
     "envalid": "^8.0.0",
     "grammy": "^1.36.3",
-    "mongoose": "^8.16.0",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.27",
     "winston": "^3.17.0"
   },
   "devDependencies": {
